test-output.log
file:///Users/gururamu/Documents/animoca/credential-mcp-server/test-workflow-with-publish.js:85
      schemeType: session.get('schemaType')!,
                                           ^

SyntaxError: Unexpected token '!'
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:497:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:544:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:148:19)

Node.js v20.20.0
